--- a/src/views/MovieInfo/MovieInfo.module.css
+++ b/src/views/MovieInfo/MovieInfo.module.css
@@ -1,5 +1,5 @@
 .movieInfo {
-  padding: 10px 0 10px;
+  padding-bottom: 10px;
   display: flex;
   box-shadow: 0px 7px 3px 5px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -12,4 +12,9 @@
 .movieInfo img {
   display: block;
   width: 320px;
+}
+
+.goBackBtn {
+  margin: 10px;
+  min-width: 100px;
 }
